--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,8 +2,8 @@ name: VK Humor Bot
 
 on:
   schedule:
-    # Запуск каждые 6 часов
-    - cron: '0 */1 * * *'
+    # Запуск каждые 12 часов
+    - cron: '0 */12 * * *'
   workflow_dispatch: # Возможность ручного запуска из интерфейса GitHub
 
 jobs:
@@ -28,4 +28,5 @@ jobs:
       env:
         VK_TOKEN: ${{ secrets.VK_TOKEN }}
         GROUP_ID: ${{ secrets.GROUP_ID }}
+        GROUP_ID_2: ${{ secrets.GROUP_ID_2 }}
       run: python bot.py
