--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,9 +2,12 @@ name: VK Humor Bot
 
 on:
   schedule:
-    # Запуск каждые 12 часов
     - cron: '0 */12 * * *'
-  workflow_dispatch: # Возможность ручного запуска из интерфейса GitHub
+  workflow_dispatch:
+
+concurrency:
+  group: vk-humor-bot
+  cancel-in-progress: false
 
 jobs:
   post_content:
@@ -12,17 +15,34 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v5
       with:
-        python-version: '3.9'
+        python-version: '3.11'
+        cache: 'pip'
+
+    - name: Install system deps
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libxml2 libxslt1.1
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        python -m pip install -r requirements.txt
+
+    - name: Check secrets
+      env:
+        VK_TOKEN: ${{ secrets.VK_TOKEN }}
+        GROUP_ID: ${{ secrets.GROUP_ID }}
+        GROUP_ID_2: ${{ secrets.GROUP_ID_2 }}
+      run: |
+        if [ -z "${VK_TOKEN}" ] || [ -z "${GROUP_ID}" ]; then
+          echo "Missing VK_TOKEN or GROUP_ID secrets"; exit 1;
+        fi
+        echo "Secrets OK"
 
     - name: Run Bot
       env:
